--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,7 @@
 body {
-  padding: 10px;
-  font-family: sans-serif;
+    padding: 10px;
+    font-family: sans-serif;
+    min-height: 75rem;
+    padding-top: 4.5rem;
+    font-family: 'Roboto', sans-serif;
 }
